// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat item draft is shown in italics 1`] = `
<View
  style={
    {
      "backgroundColor": undefined,
      "flex": 1,
      "height": 70,
      "marginTop": 8,
      "paddingHorizontal": 10,
    }
  }
>
  <View
    style={
      {
        "alignContent": undefined,
        "alignItems": "center",
        "backgroundColor": undefined,
        "flex": undefined,
        "flexDirection": "row",
        "gap": undefined,
        "height": undefined,
        "justifyContent": undefined,
        "marginBottom": undefined,
        "marginHorizontal": undefined,
        "marginVertical": undefined,
      }
    }
  >
    <View
      style={{}}
    >
      <View
        style={
          {
            "alignContent": "flex-start",
            "alignItems": "center",
            "backgroundColor": undefined,
            "flex": 1,
            "flexDirection": "row",
            "gap": 12,
            "height": undefined,
            "justifyContent": undefined,
            "marginBottom": undefined,
            "marginHorizontal": undefined,
            "marginVertical": undefined,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#64189b",
              "borderRadius": 14,
              "flex": undefined,
              "height": 56,
              "maxHeight": 56,
              "maxWidth": 56,
              "minHeight": 56,
              "minWidth": 56,
              "overflow": "hidden",
              "width": 56,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <Text
              style={
                {
                  "color": "white",
                  "fontSize": 24,
                  "fontWeight": "bold",
                }
              }
            >
              T
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": undefined,
              "height": undefined,
              "style": {
                "flex": 1,
                "paddingRight": 16,
                "width": "100%",
              },
            }
          }
        >
          <View
            style={
              {
                "alignItems": undefined,
                "backgroundColor": undefined,
                "flex": 1,
                "flexDirection": "column",
                "gap": 4,
                "height": 40,
                "justifyContent": "center",
                "marginBottom": 12,
                "marginHorizontal": undefined,
                "marginVertical": undefined,
              }
            }
          >
            <View
              style={
                {
                  "alignContent": undefined,
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "flex": undefined,
                  "flexDirection": "row",
                  "gap": undefined,
                  "height": undefined,
                  "justifyContent": undefined,
                  "marginBottom": undefined,
                  "marginHorizontal": undefined,
                  "marginVertical": undefined,
                }
              }
            >
              <View
                style={
                  {
                    "backgroundColor": undefined,
                    "height": undefined,
                    "style": {
                      "flexDirection": "row",
                      "flexShrink": 1,
                      "marginRight": 4,
                    },
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": undefined,
                      "flex": undefined,
                      "height": undefined,
                      "marginBottom": undefined,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "white",
                        "fontFamily": "Didot",
                        "fontSize": 20,
                        "fontWeight": undefined,
                        "marginVertical": 4,
                      }
                    }
                  >
                    trusted_name
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "backgroundColor": undefined,
                    "height": undefined,
                    "style": {
                      "alignSelf": "flex-start",
                      "flexShrink": 0,
                    },
                  }
                }
              >
                <Text>
                  check-circle
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "backgroundColor": undefined,
                  "flex": undefined,
                  "height": 18,
                  "marginBottom": undefined,
                }
              }
            >
              <Text
                numberOfLines={2}
                style={
                  {
                    "color": "#9B9B9B",
                    "fontFamily": undefined,
                    "fontSize": 12,
                    "fontStyle": "italic",
                    "fontWeight": "400",
                  }
                }
              >
                Draft: draft
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": undefined,
          "height": 40,
          "style": {
            "position": "absolute",
            "right": 0,
            "zIndex": 10,
          },
          "width": 70,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-end",
            "backgroundColor": undefined,
            "flex": undefined,
            "flexDirection": "column",
            "gap": 12,
            "height": 40,
            "justifyContent": "center",
            "marginHorizontal": undefined,
            "marginVertical": undefined,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": undefined,
              "flex": undefined,
              "height": 16,
              "marginBottom": -2,
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              {
                "color": "#F0F0F0",
                "fontFamily": "Cairo, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif",
                "fontSize": 12,
                "fontWeight": "100",
              }
            }
          >
            Yesterday
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": undefined,
              "height": 20,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "#292929",
        "height": 1,
        "marginRight": -10,
        "marginTop": 18,
      }
    }
  />
</View>
`;

exports[`chat item unreadMessagesAmount is shown 1`] = `
<View
  style={
    {
      "backgroundColor": undefined,
      "flex": 1,
      "height": 70,
      "marginTop": 8,
      "paddingHorizontal": 10,
    }
  }
>
  <View
    style={
      {
        "alignContent": undefined,
        "alignItems": "center",
        "backgroundColor": undefined,
        "flex": undefined,
        "flexDirection": "row",
        "gap": undefined,
        "height": undefined,
        "justifyContent": undefined,
        "marginBottom": undefined,
        "marginHorizontal": undefined,
        "marginVertical": undefined,
      }
    }
  >
    <View
      style={{}}
    >
      <View
        style={
          {
            "alignContent": "flex-start",
            "alignItems": "center",
            "backgroundColor": undefined,
            "flex": 1,
            "flexDirection": "row",
            "gap": 12,
            "height": undefined,
            "justifyContent": undefined,
            "marginBottom": undefined,
            "marginHorizontal": undefined,
            "marginVertical": undefined,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#64189b",
              "borderRadius": 14,
              "flex": undefined,
              "height": 56,
              "maxHeight": 56,
              "maxWidth": 56,
              "minHeight": 56,
              "minWidth": 56,
              "overflow": "hidden",
              "width": 56,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <Text
              style={
                {
                  "color": "white",
                  "fontSize": 24,
                  "fontWeight": "bold",
                }
              }
            >
              T
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": undefined,
              "height": undefined,
              "style": {
                "flex": 1,
                "paddingRight": 16,
                "width": "100%",
              },
            }
          }
        >
          <View
            style={
              {
                "alignItems": undefined,
                "backgroundColor": undefined,
                "flex": 1,
                "flexDirection": "column",
                "gap": 4,
                "height": 40,
                "justifyContent": "center",
                "marginBottom": 12,
                "marginHorizontal": undefined,
                "marginVertical": undefined,
              }
            }
          >
            <View
              style={
                {
                  "alignContent": undefined,
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "flex": undefined,
                  "flexDirection": "row",
                  "gap": undefined,
                  "height": undefined,
                  "justifyContent": undefined,
                  "marginBottom": undefined,
                  "marginHorizontal": undefined,
                  "marginVertical": undefined,
                }
              }
            >
              <View
                style={
                  {
                    "backgroundColor": undefined,
                    "height": undefined,
                    "style": {
                      "flexDirection": "row",
                      "flexShrink": 1,
                      "marginRight": 4,
                    },
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": undefined,
                      "flex": undefined,
                      "height": undefined,
                      "marginBottom": undefined,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "white",
                        "fontFamily": "Didot",
                        "fontSize": 20,
                        "fontWeight": undefined,
                        "marginVertical": 4,
                      }
                    }
                  >
                    trusted_name
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "backgroundColor": undefined,
                    "height": undefined,
                    "style": {
                      "alignSelf": "flex-start",
                      "flexShrink": 0,
                    },
                  }
                }
              >
                <Text>
                  check-circle
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "backgroundColor": undefined,
                  "flex": undefined,
                  "height": 18,
                  "marginBottom": undefined,
                }
              }
            >
              <Text
                numberOfLines={2}
                style={
                  {
                    "color": "white",
                    "fontFamily": undefined,
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                  }
                }
              >
                unsupported message
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": undefined,
          "height": 40,
          "style": {
            "position": "absolute",
            "right": 0,
            "zIndex": 10,
          },
          "width": 70,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-end",
            "backgroundColor": undefined,
            "flex": undefined,
            "flexDirection": "column",
            "gap": 12,
            "height": 40,
            "justifyContent": "center",
            "marginHorizontal": undefined,
            "marginVertical": undefined,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": undefined,
              "flex": undefined,
              "height": 16,
              "marginBottom": -2,
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              {
                "color": "#F0F0F0",
                "fontFamily": "Cairo, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif",
                "fontSize": 12,
                "fontWeight": "100",
              }
            }
          >
            Yesterday
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#3f3f3f",
              "borderColor": "#3f3f3f",
              "borderRadius": 16,
              "borderWidth": 2,
              "flex": undefined,
              "flexDirection": "row",
              "height": undefined,
              "justifyContent": "center",
              "marginHorizontal": undefined,
              "marginRight": undefined,
              "paddingHorizontal": 8,
              "paddingVertical": 1,
              "width": undefined,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": undefined,
                "flex": undefined,
                "height": undefined,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#F0F0F0",
                  "fontFamily": "Cairo, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif",
                  "fontSize": 12,
                  "fontWeight": "100",
                  "textTransform": "uppercase",
                }
              }
            >
              73
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "#292929",
        "height": 1,
        "marginRight": -10,
        "marginTop": 18,
      }
    }
  />
</View>
`;
